show a menu in the user area, lots of improvements to be more consistent

--- a/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
@@ -7,6 +7,10 @@
   height: 30px; /* Hack to not push the dashboard widget below */
 }
 
+table.dataTable tr td .sites_autocomplete a {
+  width: auto;
+}
+
 .sites_selector_in_dashboard {
   margin-top:10px;
 }
