--- a/plugins/Morpheus/stylesheets/general/_form.less
+++ b/plugins/Morpheus/stylesheets/general/_form.less
@@ -9,12 +9,14 @@
 
 /* on admin screen, Save button aligned on the left */
 .admin .submit {
-  margin-left: 50px;
+  margin-left: 0px;
+  margin-top: 20px;
   float: none;
 }
 
 .admin .entityContainer .submit {
   margin: 0;
+  margin-top: 20px;
 }
 
 .entityContainer .link_but {
@@ -88,8 +90,6 @@ table.entityTable tr td a {
 
 /* cancel button below Forms */
 .entityCancel {
-  float: right;
-  clear: both;
   padding: 10px 0;
   font-size: 12px;
 }
