--- a/plugins/API/templates/listAllAPI.twig
+++ b/plugins/API/templates/listAllAPI.twig
@@ -1,17 +1,16 @@
-{% extends 'dashboard.twig' %}
-{% set showMenu=false %}
+{% extends 'user.twig' %}
 
 {% block content %}
 
-{% include "@CoreHome/_siteSelectHeader.twig" %}
+<div>
 
-<div class="page_api pageWrap">
+    <h2>{{ 'API_QuickDocumentationTitle'|translate }}</h2>
+
+    {% include "@CoreHome/_siteSelectHeader.twig" %}
 
     <div class="top_controls">
         {% include "@CoreHome/_periodSelect.twig" %}
     </div>
-
-    <h2>{{ 'API_QuickDocumentationTitle'|translate }}</h2>
 
     <p>{{ 'API_PluginDescription'|translate }}</p>
 
