--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -7,6 +7,11 @@
     text-decoration: underline;
 }
 
+.admin h2 + .top_bar_sites_selector {
+  margin-top: -62px;
+  margin-right: 0px !important;
+}
+
 #content.admin {
     margin: 0 0 0 260px;
     padding: 0 0 40px;
@@ -136,6 +141,10 @@ table.admin  tbody td:hover, table.admin  tbody th:hover {
     margin-top: 0;
     width: 100%;
     margin-left: 50px;
+}
+
+.adminTable .columnHelp .ui-inline-help {
+    margin-left: 0px;
 }
 
 /* other styles */
