--- a/plugins/CoreHome/templates/_topBarTopMenu.twig
+++ b/plugins/CoreHome/templates/_topBarTopMenu.twig
@@ -1,15 +1,6 @@
 <div id="topRightBar">
 
-    {% set helloAlias %}
-    {% if userAlias is not empty %}
-        {{ userAlias|raw }}
-    {% else %}
-        {{ userLogin|raw }}
-    {% endif %}
-    {% endset %}
-
     {% macro topMenuItem(label, menu, currentModule, currentAction) %}
-
         {% if menu._html is defined %}
             {{ menu._html|raw }}
         {% elseif (menu._url.module == currentModule and (menu._url.action is empty or menu._url.action == currentAction)) %}
@@ -31,41 +22,16 @@
 
     {% endmacro %}
 
-    {% for label,menu in topMenu if menu._order >= 0 and menu._order <= 500 %}
-        {{ _self.topMenuItem(label, menu, currentModule, currentAction) }}
-        |
-    {% endfor %}
+    {% if topMenuModule is not defined %}
+        {% set topMenuModule = currentModule %}
+        {% set topMenuAction = currentAction %}
+    {% endif %}
 
-    <span class="topBarElem">
-        <div id="userMenu"
-             tooltip="{{ 'General_HelloUser'|translate(helloAlias|trim)|rawSafeDecoded }}"
-             menu-title="{{ helloAlias|trim }}"
-             piwik-menudropdown>
-
-            {% for lev1UserLabel,lev1UserMenu in userMenu if lev1UserLabel|slice(0,1) != '_' %}
-                {% if not loop.first %}
-                    <hr class="item separator"/>
-                {% endif %}
-
-                {% if lev1UserMenu._hasSubmenu is defined and lev1UserMenu._hasSubmenu %}
-                    {% if lev1UserLabel %}
-                        <a class="item disabled category">{{ lev1UserLabel|translate }}</a>
-                    {% endif %}
-
-                    {% for lev2Label,lev2Menu in lev1UserMenu if lev2Label|slice(0,1) != '_' %}
-                        {{ _self.userMenuItem(lev2Label, lev2Menu, currentModule, currentAction) }}
-                    {% endfor %}
-                {% else %}
-                    {{ _self.userMenuItem(lev1UserLabel, lev1UserMenu, currentModule, currentAction) }}
-                {% endif %}
-
-            {% endfor %}
-        </div>
-    </span>
-
-    {% for label,menu in topMenu if menu._order >= 501 %}
-        |
-        {{ _self.topMenuItem(label, menu, currentModule, currentAction) }}
+    {% for label,menu in topMenu %}
+        {% if not loop.first %}
+                |
+        {% endif %}
+        {{ _self.topMenuItem(label, menu, topMenuModule, topMenuAction) }}
     {% endfor %}
 
 </div>
