--- a/plugins/UsersManager/templates/userSettings.twig
+++ b/plugins/UsersManager/templates/userSettings.twig
@@ -1,9 +1,8 @@
-{% extends 'admin.twig' %}
+{% extends 'user.twig' %}
 
 {% block content %}
 <h2 piwik-enriched-headline>{{ 'UsersManager_PersonalSettings'|translate }}</h2>
 
-<br/>
 <div class="ui-confirm" id="confirmPasswordChange">
     <h2>{{ 'UsersManager_ChangePasswordConfirm'|translate }}</h2>
     <input role="yes" type="button" value="{{ 'General_Yes'|translate }}"/>
