make sure to use same link colors in user area

--- a/plugins/CorePluginsAdmin/stylesheets/marketplace.less
+++ b/plugins/CorePluginsAdmin/stylesheets/marketplace.less
@@ -84,7 +84,7 @@
     float: left;
     border: 1px solid #dadada;
     padding: 15px;
-    background-color: #F6F5F3;
+    background-color: #f2f2f2;
     margin-right: 14px;
     margin-bottom: 15px;
     position: relative;
