more consistent usage of link color and other ui elements in user/admin area

--- a/plugins/API/templates/listAllAPI.twig
+++ b/plugins/API/templates/listAllAPI.twig
@@ -15,13 +15,13 @@
     <p>{{ 'API_PluginDescription'|translate }}</p>
 
     <p>
-        <strong>{{ 'API_MoreInformation'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/analytics-api'>","</a>","<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/analytics-api/reference'>","</a>")|raw }}</strong>
+        {{ 'API_MoreInformation'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/analytics-api'>","</a>","<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/analytics-api/reference'>","</a>")|raw }}
     </p>
 
     <h2>{{ 'API_UserAuthentication'|translate }}</h2>
 
     <p>
-        {{ 'API_UsingTokenAuth'|translate('<b>','</b>',"")|raw }}<br/>
+        {{ 'API_UsingTokenAuth'|translate('','',"")|raw }}<br/>
         <span id='token_auth'>&amp;token_auth=<strong>{{ token_auth }}</strong></span><br/>
         {{ 'API_KeepTokenSecret'|translate('<b>','</b>')|raw }}
         {{ list_api_methods_with_links|raw }}
