--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -418,6 +418,10 @@ table.dataTable {
                 text-decoration: none !important;
                 color: @theme-color-link;
                 width: inherit;
+
+              &.withIcon {
+                  color: @theme-color-text;
+              }
             }
 
             div.label,
