fix websites selector ui test, text should not be underlined on hover

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -64,7 +64,10 @@ button[type="button"],
         min-height: 30px;
         .box-sizing(border-box);
         a {
-            color: @theme-color-text;
+          color: @theme-color-text;
+          &:hover {
+            text-decoration: none;
+          }
         }
         .custom_select_block {
             .custom_select_container{
