--- a/plugins/Morpheus/templates/admin.twig
+++ b/plugins/Morpheus/templates/admin.twig
@@ -24,8 +24,13 @@
     <!--[if (gte IE 9)|!(IE)]><!-->
     <body ng-app="app" class="{{ postEvent('Template.bodyClass', 'admin') }}"><!--<![endif]-->
 
-    {% set topMenuModule = 'CoreAdminHome' %}
-    {% set topMenuAction = 'generalSettings' %}
+    {% if isSuperUser %}
+        {% set topMenuModule = 'CoreAdminHome' %}
+        {% set topMenuAction = 'generalSettings' %}
+    {% else %}
+        {% set topMenuModule = 'PrivacyManager' %}
+        {% set topMenuAction = 'privacySettings' %}
+    {% endif %}
 
     {% include "_iframeBuster.twig" %}
     {% include "@CoreHome/_javaScriptDisabled.twig" %}
