it makes actually more sense for admin users to link to websites by default is this is always activated and maybe more interesting for them

--- a/plugins/Morpheus/templates/admin.twig
+++ b/plugins/Morpheus/templates/admin.twig
@@ -28,8 +28,8 @@
         {% set topMenuModule = 'CoreAdminHome' %}
         {% set topMenuAction = 'generalSettings' %}
     {% else %}
-        {% set topMenuModule = 'PrivacyManager' %}
-        {% set topMenuAction = 'privacySettings' %}
+        {% set topMenuModule = 'SitesManager' %}
+        {% set topMenuAction = 'index' %}
     {% endif %}
 
     {% include "_iframeBuster.twig" %}
