Introduced variables for background

--- a/plugins/CoreAdminHome/stylesheets/generalSettings.less
+++ b/plugins/CoreAdminHome/stylesheets/generalSettings.less
@@ -20,13 +20,13 @@
 
 table.admin {
     font-size: 0.9em;
-    background-color: #fff;
+    background-color: @theme-color-background-base;
     border-collapse: collapse;
 }
 
 table.admin thead th {
-    border-right: 1px solid #fff;
-    color: #fff;
+    border-right: 1px solid @theme-color-background-base;
+    color: @theme-color-background-base;
     text-align: center;
     padding: 5px;
     text-transform: uppercase;
