--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -72,7 +72,7 @@
 }
 
 .widget {
-  background: #fff;
+  background: @theme-color-background-base;
   border: 1px solid #bbb6ad;
   margin: 10px 7px;
   border-radius: 4px;
@@ -147,7 +147,7 @@
 .ui-confirm {
   display: none;
   width: 630px;
-  background: #fff;
+  background: @theme-color-background-base;
   color: @theme-color-text-light;
   cursor: default;
   font-size: 12px !important;
