--- a/plugins/Morpheus/stylesheets/general/_form.less
+++ b/plugins/Morpheus/stylesheets/general/_form.less
@@ -102,7 +102,7 @@ table.entityTable tr td a {
 }
 
 .entityList ul li {
-  background: #fff url(plugins/Morpheus/images/li_dbl_gray.gif) no-repeat 6px 10px;
+  background: @theme-color-background-base url(plugins/Morpheus/images/li_dbl_gray.gif) no-repeat 6px 10px;
   padding: 0 0 0 21px;
   line-height: 22px;
 }
