--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -204,7 +204,7 @@ div.scrollable {
 .segment-element .segment-content .segment-rows {
   padding: 4px;
   margin: 0 3px 0 0;
-  background: #fff;
+  background: @theme-color-background-base;
   border: 1px solid #a9a399;
   border-radius: 3px 3px 3px 3px;
   position: relative;
@@ -214,7 +214,7 @@ div.scrollable {
 .segment-element .segment-content .segment-add-row,
 .segment-element .segment-content .segment-add-or {
   font: bold 14px Arial;
-  background: #fff;
+  background: @theme-color-background-base;
   color: #b9b9b9;
   text-align: center;
   position: relative;
@@ -303,7 +303,7 @@ div.scrollable {
 .segment-element .segment-content .segment-or:after {
   content: '';
   position: absolute;
-  background: #fff;
+  background: @theme-color-background-base;
   border: 1px solid #efefeb;
   width: 10px;
   top: -1px;
@@ -327,7 +327,7 @@ div.scrollable {
   margin: -1px 0 -1px 6%;
   z-index: 1;
   position: relative;
-  background: #fff;
+  background: @theme-color-background-base;
   padding: 5px 35px;
   color: #4f4f4f;
   font: bold 14px Arial;
