--- a/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
@@ -35,7 +35,7 @@
   float: left;
   position: relative;
   z-index: 19;
-  background: #fff url(plugins/Morpheus/images/sites_selection.png) repeat-x 0 0;
+  background: @theme-color-background-base url(plugins/Morpheus/images/sites_selection.png) repeat-x 0 0;
   border: 1px solid #d4d4d4;
   color: #255792;
   border-radius: 4px;
