--- a/plugins/CoreHome/stylesheets/menu.less
+++ b/plugins/CoreHome/stylesheets/menu.less
@@ -45,7 +45,7 @@
 }
 
 .Menu--dashboard > .Menu-tabList ul {
-    background: #fff; /*IE6 needs this*/
+    background: @theme-color-background-base; /*IE6 needs this*/
     float: left;
     position: relative;
 }
@@ -76,7 +76,7 @@
 /* LEVEL1 HOVER */
 .Menu--dashboard > .Menu-tabList > li:hover,
 .Menu--dashboard > .Menu-tabList > li.sfHover {
-    background: #fff;
+    background: @theme-color-background-base;
 }
 
 .Menu--dashboard > .Menu-tabList > li:hover > a,
