--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -18,7 +18,7 @@
 }
 
 #visitsLive .country {
-    background: #FFF url(plugins/CoreHome/images/bullet1.gif) no-repeat scroll 0 0;
+    background: @theme-color-background-base url(plugins/CoreHome/images/bullet1.gif) no-repeat scroll 0 0;
 }
 
 #visitsLive .referrer {
@@ -35,7 +35,7 @@
 }
 
 #visitsLive .settings {
-    background: #FFF none repeat scroll 0 0;
+    background: @theme-color-background-base none repeat scroll 0 0;
 }
 
 #visitsLive .settings a {
