--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -229,14 +229,14 @@ table.entityTable tr td a:hover {
     position: relative;
   }
   .dropdown-body {
-    background:#fff;
+    background:@theme-color-background-base;
     padding:0 10px;
     .border-radius(0px);
     border: 1px solid @color-silver-l80;
     border-top-width: 0px;
   }
   &:hover .dropdown-body {
-    background:#fff;
+    background:@theme-color-background-base;
     border-color: @color-silver-l80;
   }
   .segmentationContainer {
@@ -272,7 +272,7 @@ table.entityTable tr td a:hover {
           color: @theme-color-text-light;
           &:hover {
               border-color: @color-silver-l80 !important;
-              background: #fff !important;
+              background:@theme-color-background-base !important;
               .border-radius(0px);
           }
           }
@@ -298,7 +298,7 @@ table.entityTable tr td a:hover {
   #Dashboard {
     ul {
 
-      background: #fff;
+      background: @theme-color-background-base;
       border: 1px solid @color-silver-l80;
       padding: 8px 10px 8px 10px;
       color: @theme-color-text-light;
@@ -347,7 +347,7 @@ table.dataTable {
     thead {
         tr {
             th {
-                background: #fff;
+                background: @theme-color-background-base;
                 text-transform: uppercase;
                 color: @theme-color-text;
                 .font-default(10px, 12px);
@@ -437,13 +437,13 @@ table.dataTable {
         &.subDataTable:hover > td.labeleven,
         &.subDataTable:hover > td.columneven,
         td.cellSubDataTable {
-          background-color: #fff !important;
+          background-color: @theme-color-background-base !important;
         }
     }
 
     &.entityTable tr {
         td  {
-            background-color: #fff !important;
+            background-color: @theme-color-background-base !important;
         }
         &.inactive-plugin td,
         &:hover td {
@@ -685,10 +685,10 @@ div.sparkline {
             }
 
             ol {
-                background: #fff !important;
+                background: @theme-color-background-base !important;
                 border-top: 0 !important;
                 li {
-                    background: #fff !important;
+                    background: @theme-color-background-base !important;
                     .font-default(11px, 19px);
                     font-weight: normal;
                     color: @theme-color-text-lighter;
