Adding missing files

--- a/plugins/Login/stylesheets/login.css
+++ b/plugins/Login/stylesheets/login.css
@@ -122,9 +122,9 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     color: #555;
-    -moz-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
-    -webkit-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
-    box-shadow: 0 1px 1px #ccc inset, 0 1px 0 #fff;
+    -moz-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 @theme-color-background-base;
+    -webkit-box-shadow: 0 1px 1px #ccc inset, 0 1px 0 @theme-color-background-base;
+    box-shadow: 0 1px 1px #ccc inset, 0 1px 0 @theme-color-background-base;
 }
 
 #login_form_password,
@@ -132,7 +132,7 @@
 #reset_form_password_bis,
 #login_form_login,
 #reset_form_login {
-    background: #fff url(../../Morpheus/images/login-sprite.png) no-repeat;
+    background: @theme-color-background-base url(../../Morpheus/images/login-sprite.png) no-repeat;
 }
 
 #login_form_password,
