Add ability to customise the font family in HTML email reports

--- a/plugins/CoreHome/templates/ReportRenderer/_htmlReportHeader.twig
+++ b/plugins/CoreHome/templates/ReportRenderer/_htmlReportHeader.twig
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
 </head>
-<body style="color: rgb({{ reportTextColor }});">
+<body style="font-family: {{ reportFontFamily }}; color: rgb({{ reportTextColor }});">
 
 <a id="reportTop" rel="noreferrer" target="_blank" href="{{ currentPath }}"><img title="{{ 'General_GoTo'|translate("Piwik") }}" border="0" alt="Piwik" src='{{ logoHeader }}'/></a>
 
