Renamed the .css file into a .less file

--- a/plugins/Login/stylesheets/login.less
+++ b/plugins/Login/stylesheets/login.less
@@ -60,7 +60,7 @@
 }
 
 .loginSection {
-    background-color: #fafafa;
+    background-color: @login-section-background;
     width: 360px;
     padding: 30px;
     margin: 50px auto 0 auto;
