--- a/plugins/Morpheus/stylesheets/simple_structure.css
+++ b/plugins/Morpheus/stylesheets/simple_structure.css
@@ -2,7 +2,7 @@ body#simple  {
 	background: #eee;
 }
 #contentsimple {
-	background: @theme-color-background-base;
+	background: #fff;
 	color: #000;
 	font-family: Arial, Georgia, "Times New Roman", Times, serif;
 	padding: 1em 2em;
