--- a/plugins/CoreHome/templates/ReportRenderer/_htmlReportBody.twig
+++ b/plugins/CoreHome/templates/ReportRenderer/_htmlReportBody.twig
@@ -23,7 +23,7 @@
 
     {% if displayTable %}
         <table style="border-collapse:collapse; margin-left: 5px;">
-            <thead style="background-color: rgb({{ tableHeaderBgColor }}); color: rgb({{ tableHeaderTextColor }}); font-size: {{ reportTableHeaderTextSize }}pt;">
+            <thead style="background-color: rgb({{ tableHeaderBgColor }}); color: rgb({{ tableHeaderTextColor }}); font-size: {{ reportTableHeaderTextSize }}pt; text-transform: {{ reportTableHeaderTextTransform }}">
             {% for columnName in reportColumns %}
                 <th style="padding: 6px 0;">
                     &nbsp;{{ columnName }}&nbsp;&nbsp;
