changed all css within '.widgetName h3{' to make all the headings of the widgits on the dashboard to h3 from span without changing what it looked like.

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -118,19 +118,20 @@
 .widgetTop {
   cursor: move;
   font-size: 10pt;
-  font-weight: bold;
+  font-weight: normal;
   padding-bottom: 4px;
 }
 
 .widgetTopHover {
 }
 
-.widgetName {
-  font-size: 18px;
-  padding: 2px 0 0 10px;
+.widgetName h3{
+  font-size: 15px;
+  padding: 0px;
+  margin: 2px;
   font-weight: normal;
-  color: #fff;
-  text-shadow: 1px 1px 2px #7e7363;
+  color: #0D0D0D;
+  text-shadow: none;
 }
 
 // Overriding some dataTable css for better dashboard display
