--- a/plugins/CoreHome/templates/ReportRenderer/_htmlReportHeader.twig
+++ b/plugins/CoreHome/templates/ReportRenderer/_htmlReportHeader.twig
@@ -6,7 +6,7 @@
 
 <a id="reportTop" rel="noreferrer" target="_blank" href="{{ currentPath }}"><img title="{{ 'General_GoTo'|translate("Piwik") }}" border="0" alt="Piwik" src='{{ logoHeader }}'/></a>
 
-<h1 style="color: rgb({{ reportTitleTextColor }}); font-size: {{ reportTitleTextSize }}pt;">
+<h1 style="font-weight:normal; color: rgb({{ reportTitleTextColor }}); font-size: {{ reportTitleTextSize }}pt;">
     {{ reportTitle }}
 </h1>
 
@@ -21,7 +21,7 @@
 {% endif %}
 
 {% if reportMetadata|length > 1 %}
-    <h2 style="color: rgb({{ reportTitleTextColor }}); font-size: {{ reportTitleTextSize }}pt;">
+    <h2 style="font-weight:normal; color: rgb({{ reportTitleTextColor }}); font-size: {{ reportTitleTextSize }}pt;">
         {{ 'ScheduledReports_TableOfContent'|translate }}
     </h2>
     <ul>
