Added h3 tags to widget headers

--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -105,12 +105,6 @@
   background: url(plugins/Morpheus/images/loading-blue.gif) no-repeat top right;
 }
 
-.widget h2 {
-  font-size: 1.2em;
-  margin-left: 10px;
-  font-weight: bold;
-}
-
 .widget p {
   margin-left: 10px;
 }
@@ -131,6 +125,7 @@
   font-weight: normal;
   color: #fff;
   text-shadow: 1px 1px 2px #7e7363;
+  margin-top: 0;
 }
 
 // Overriding some dataTable css for better dashboard display
