--- a/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
+++ b/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
@@ -13,10 +13,11 @@
       <div class="button" id="refresh">
         <img src="plugins/Morpheus/images/refresh.png" title="{{ 'General_Refresh'|translate }}" />
       </div>
-      <h3 class="widgetName">{% if widgetName is defined %}>{{ widgetName }}{% endif %}</h3>
+      <h3 class="widgetName">{% if widgetName is defined %}{{ widgetName }}{% endif %}</h3>
     </div>
     <div class="widgetContent">
       <div class="widgetLoading">{{ 'Dashboard_LoadingWidget'|translate }}</div>
     </div>
   </div>
 </div>
+
