Improved accessibility by putting offscreen text in the widget title

--- a/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
+++ b/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
@@ -13,11 +13,14 @@
       <div class="button" id="refresh">
         <img src="plugins/Morpheus/images/refresh.png" title="{{ 'General_Refresh'|translate }}" />
       </div>
-      <h3 class="widgetName">{% if widgetName is defined %}{{ widgetName }}{% endif %}</h3>
+      <h3 class="widgetName">{% if widgetName is defined %}{{ widgetName }}{% endif %}
+        <div class="widgetNameOffScreen">
+          Widget
+        </div>
+      </h3>
     </div>
     <div class="widgetContent">
       <div class="widgetLoading">{{ 'Dashboard_LoadingWidget'|translate }}</div>
     </div>
   </div>
 </div>
-
