--- a/plugins/Dashboard/stylesheets/dashboard.less
+++ b/plugins/Dashboard/stylesheets/dashboard.less
@@ -128,6 +128,12 @@
   margin-top: 0;
 }
 
+.widgetNameOffScreen {
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 // Overriding some dataTable css for better dashboard display
 .widget .dataTableWrapper {
   width: 100% !important;
