added a link at the top of the page that links to another link at the top of the main content

--- a/plugins/CoreHome/templates/_topScreen.twig
+++ b/plugins/CoreHome/templates/_topScreen.twig
@@ -1,4 +1,5 @@
 <div id="header">
     {% include "@CoreHome/_logo.twig" %}
+<a href='#main' tabindex="0" class="accessibility-skip-to-content">Skip to content</a>
     {% include "@CoreHome/_topBar.twig" %}
 </div>
