--- a/plugins/CoreHome/stylesheets/coreHome.less
+++ b/plugins/CoreHome/stylesheets/coreHome.less
@@ -71,6 +71,19 @@ h3 {
     width: auto;
 }
 
+
+.accessibility-skip-to-content{
+position:absolute;
+left:50%;
+left:-10000px;
+}
+
+.accessibility-skip-to-content:focus{
+display: block;
+position: absolute;
+left: 50%;
+}
+
 /* Calendar*/
 div.ui-datepicker {
     font-size: 62.5%;
