changed the lang translation, as well as putting section tags around the user map to tab across it, and changed the alt text for "Goals.php." to distinguish between "Display a table with Goals metrics" and "Display a table with visitor enganement metrics

--- a/plugins/Morpheus/templates/dashboard.twig
+++ b/plugins/Morpheus/templates/dashboard.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="ng-app" ng-app="piwikApp">
+<html id="ng-app" lang="{{ language }}" ng-app="piwikApp">
     <head>
         {% block head %}
             <meta charset="utf-8">
