--- a/plugins/SitesManager/templates/sites-list/add-site-link.html
+++ b/plugins/SitesManager/templates/sites-list/add-site-link.html
@@ -1,4 +1,3 @@
-<br><button><a ng-show="hasSuperUserAccess && !siteIsBeingEdited" class="addRowSite" ng-click="addSite()">
-    {{ 'SitesManager_AddSite'|translate }}
-</a></button><br><br>
-
+<a ng-show="hasSuperUserAccess && !siteIsBeingEdited" class="addRowSite" ng-click="addSite()" tabindex="1">
+    Add a new website
+</a>
