--- a/plugins/SitesManager/templates/sites-list/add-site-link.html
+++ b/plugins/SitesManager/templates/sites-list/add-site-link.html
@@ -1,3 +1,3 @@
 <a ng-show="hasSuperUserAccess && !siteIsBeingEdited" class="addRowSite" ng-click="addSite()" tabindex="1">
-    Add a new website
+    {{ 'SitesManager_AddSite'|translate }}
 </a>
