Make Skip to Content text translated

--- a/plugins/CoreHome/templates/_topScreen.twig
+++ b/plugins/CoreHome/templates/_topScreen.twig
@@ -1,5 +1,5 @@
 <div id="header">
-    <a href='#main' tabindex="0" class="accessibility-skip-to-content">{{'SkipToContent'|translate}}</a>
+    <a href='#main' tabindex="0" class="accessibility-skip-to-content">{{'General_SkipToContent'|translate}}</a>
     {% include "@CoreHome/_logo.twig" %}
     {% include "@CoreHome/_topBar.twig" %}
 </div>
