Added multi languge to the offsceen 'Widget text'

--- a/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
+++ b/plugins/Dashboard/templates/_widgetFactoryTemplate.twig
@@ -15,7 +15,7 @@
       </div>
       <h3 class="widgetName">{% if widgetName is defined %}{{ widgetName }}{% endif %}
         <div class="widgetNameOffScreen">
-          Widget
+          {{ 'General_Widget'|translate }}
         </div>
       </h3>
     </div>
