fix website selector screenshot test make sure text is not underlined in site selector

--- a/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
+++ b/plugins/CoreHome/angularjs/siteselector/siteselector.directive.less
@@ -57,6 +57,10 @@ table.dataTable tr td .sites_autocomplete a {
   padding-bottom: 9px;
 }
 
+#content.admin .adminTable .sites_autocomplete a {
+  text-decoration: none;
+}
+
 .sites_autocomplete .custom_select_ul_list li a,
 .sites_autocomplete .custom_select_all a,
 .sites_autocomplete .custom_select_main_link > span {
