You can now see the focus of menu items when tabbing through the page

--- a/plugins/Morpheus/stylesheets/general/_default.less
+++ b/plugins/Morpheus/stylesheets/general/_default.less
@@ -51,7 +51,7 @@ pre.code-pre {
 
 /* remember to define focus styles! */
 :focus {
-    outline: 0;
+    outline: auto;
 }
 
 /* remember to highlight inserts somehow! */
