Changed the offscreen text to a link span and moved the menu text inside the link

--- a/plugins/CoreHome/stylesheets/menu.less
+++ b/plugins/CoreHome/stylesheets/menu.less
@@ -166,8 +166,10 @@
   }
 }
 
-.menuTextOffScreen {
+a span {
+  height: 1px;
+  width: 1px;
+  position: absolute;
   overflow: hidden;
-  width:1px;
-  height:1px;
+  top: -10px;
 }
