--- a/plugins/Login/templates/login.twig
+++ b/plugins/Login/templates/login.twig
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="IE=EDGE,chrome=1" >
-    <title>{% if isCustomLogo == false %}Piwik &rsaquo; {% endif %}{{ 'Login_LogIn'|translate }}</title>
+{% extends 'layout.twig' %}
 
-    {% include "@CoreHome/_favicon.twig" %}
-    {% autoescape false %}
-    {{ includeAssets({"type": "css"}) }}
-    {% endautoescape %}
-    <meta name="description" content="{{ 'General_OpenSourceWebAnalytics'|translate }}"/>
-    <meta name="apple-itunes-app" content="app-id=737216887" />
-    <meta name="google-play-app" content="app-id=org.piwik.mobile2">
-    {% include "_jsCssIncludes.twig" %}
+{% block head %}
+    {{ parent() }}
     <script type="text/javascript" src="libs/bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <!--[if lt IE 9]>
     <script src="libs/bower_components/html5shiv/dist/html5shiv.min.js"></script>
@@ -26,12 +15,16 @@
             $('input').placeholder();
             $.smartbanner({title: "Piwik Mobile 2", author: "Piwik team", hideOnInstall: false, layer: true, icon: "plugins/CoreHome/images/googleplay.png"});
         });
-	</script>
-	</head>
-	<!--[if lt IE 9 ]>
-	<body id="loginPage" class="old-ie"> <![endif]-->
-    <!--[if (gte IE 9)|!(IE)]><!-->
-    <body id="loginPage"><!--<![endif]-->
+    </script>
+{% endblock %}
+
+{% block pageTitle %}{% if isCustomLogo == false %}Piwik &rsaquo; {% endif %}{{ 'Login_LogIn'|translate }}{% endblock %}
+{% block pageDescription %}{{ 'General_OpenSourceWebAnalytics'|translate }}{% endblock %}
+
+{% set bodyId = 'loginPage' %}
+
+{% block body %}
+
     {{ postEvent("Template.beforeTopBar", "login") }}
     {{ postEvent("Template.beforeContent", "login") }}
 
@@ -151,5 +144,5 @@
             </div>
         {% endif %}
     </section>
-</body>
-</html>
+
+{% endblock %}
