No bold for h3 during installation

--- a/plugins/Installation/stylesheets/installation.css
+++ b/plugins/Installation/stylesheets/installation.css
@@ -54,6 +54,7 @@ h3 {
     margin-top: 10px;
     font-family: Verdana, sans-serif;
     color: #0d0d0d;
+    font-weight: normal;
     font-size: 20px;
 }
 
