--- a/plugins/Installation/templates/layout.twig
+++ b/plugins/Installation/templates/layout.twig
@@ -50,7 +50,7 @@
         <div id="detailInstall">
             {% set nextButton %}
             <p class="nextStep">
-                <a class="submit" href="{{ linkTo({'action':nextModuleName, 'token_auth':null, 'method':null }) }}">{{ 'General_Next'|translate }} &raquo;</a>
+                <a style="margin-top: -5px;" class="submit" href="{{ linkTo({'action':nextModuleName, 'token_auth':null, 'method':null }) }}">{{ 'General_Next'|translate }} &raquo;</a>
             </p>
             {%  endset %}
             {% if showNextStepAtTop is defined and showNextStepAtTop %}
