Improve Login Screen Layout - input width.
Improve Login Screen Layout Issue #7074.
Alternatively, 320px works as well.

--- a/plugins/Login/stylesheets/login.less
+++ b/plugins/Login/stylesheets/login.less
@@ -119,7 +119,7 @@
         font-size: 20px;
         padding: 10px 15px 10px 45px;
         margin: 0 0 15px 0;
-        width: 253px; /* 258 + 2 + 55 = 315 */
+        width: 100%;
         border: 1px solid #ccc;
         border-radius: 5px;
         color: #555;
