--- a/plugins/Morpheus/stylesheets/general/_jqueryUI.less
+++ b/plugins/Morpheus/stylesheets/general/_jqueryUI.less
@@ -190,6 +190,12 @@ td.ui-datepicker-other-month.ui-state-hover.ui-datepicker-current-period {
   background: #978c7c !important;
 }
 
+.ui-datepicker select.ui-datepicker-month {
+  width: 46%;
+}
+.ui-datepicker select.ui-datepicker-year {
+  width: 54%;
+}
 .ui-datepicker-month:disabled {
   border-color: #ccc !important;
   background: #f5f3f0 !important;
