--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -82,6 +82,11 @@ ol.visitorLog {
     display:inline-block;
     max-width:90%;
     overflow: -moz-hidden-unscrollable;
+
+    &.event {
+      margin-top: 1px;
+      margin-right: 15px;
+    }
 }
 
 ol.visitorLog li {
@@ -207,7 +212,7 @@ a.visitor-log-visitor-profile-link {
 .visitorLog,.visitor-profile-actions {
     > li > div {
         display:inline-block;
-        width:85%;
+        width:90%;
         vertical-align:top;
     }
 }
@@ -215,6 +220,10 @@ a.visitor-log-visitor-profile-link {
 .action-list-action-icon {
     float:left;
     margin-top:6px;
+
+    &.event {
+      margin-top: 1px;
+    }
 }
 
 .action-list-url {
