Fixes #5209, display plus/minus icon for subtables when all columns view is used.

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -460,7 +460,7 @@ table.dataTable {
     }
 }
 
-div.dataTableVizHtmlTable:not(.dataTableActions) {
+div.dataTableVizHtmlTable:not(.dataTableActions), div.dataTableVizAllColumns {
   tr.subDataTable > td:first-child:before {
     display: inline-block;
     float: left;
